# Coen371_Assignment1

./: .gitignore  Arm.cpp  Arm.h  Assignment1.sln  CMakeLists.txt  Letters.h  OpenGl_QuizBased1.vcxproj  OpenGl_QuizBased1.vcxproj.filters  README.md  Racket.cpp  Racket.h  files_and_folders.txt  main2.cpp
Assets/asphalt/: Ground026_1K-JPG.usda  Ground026_1K-JPG.usdc
Assets/plastic/: Plastic013A_1K-JPG.usda  Plastic013A_1K-JPG.usdc
cmake/: BuildASSIMP.cmake
src/: Arm.cpp  Arm.h  Ball.cpp  Ball.h  Camera.h  CrowdObjects.cpp  CrowdObjects.h  JonahModels.cpp  JonahModels.h  KeyFrame.h  Letters.cpp  Letters.h  Material.cpp  Material.h  README.md  Racket.cpp  Racket.h  SceneObjects.cpp  SceneObjects.h  SpotLight.h  inputHandler.h  main2.cpp
src/Evan-models/: EvanArm.cpp  EvanArm.h  EvanRacket.cpp  EvanRacket.h  UnitCube.cpp  UnitCube.h
src/Models/: Model.cpp  Model.h  Texture.cpp
src/Models/Bleachers/: bleachers.mtl
src/Models/Flowers/: flower.mtl
src/Models/Grass/: grass.mtl
src/Models/ShortShrub/: shortshrub.mtl
src/Models/TallShrub/: tallshrub.mtl
src/Sabrina-models/: SabrinaArm.cpp  SabrinaArm.h  SabrinaRacket.cpp  SabrinaRacket.h
src/matt-models/: MattArm.cpp  MattArm.h  MattModel.cpp  MattModel.h  MattRacket.cpp  MattRacket.h
src/shaders/: fragment.glsl  fragmentShader.glsl  textureFShader.glsl  textureVShader.glsl  unifiedFragment.glsl  unifiedVertex.glsl  vertex.glsl  vertexShader.glsl
